cabal-version:      3.4
name:               xmlhtml-qq
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Solomon Bothwell
maintainer:         ssbothwell@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

--------------------------------------------------------------------------------

common common-options
  default-extensions:
      ImportQualifiedPost
  ghc-options: -Wall

--------------------------------------------------------------------------------

library
    import:           common-options
    exposed-modules:  Text.XmlHtml.QQ
    build-depends:    base ^>=4.18.1.0
                    , bytestring
                    , haskell-src-meta
                    , template-haskell
                    , th-lift
                    , th-lift-instances
                    , xmlhtml
    hs-source-dirs:   src
    default-language: Haskell2010
